----------------------------------------------------------------------------

SimGrid (3.29.1) NOT RELEASED YET (v3.30 expected December 21. 2021, 15:59 UTC)

----------------------------------------------------------------------------

SimGrid (3.29) October 7. 2021

The "Ask a stupid question" release.

We wish that every user ask one question about SimGrid to celebrate.
On Mattermost, Stack Overflow or using the issues tracker.


New modeling features:
 - Non-linear resource sharing, modeling resources whose performance heavily degrades with contention:
   - The total capacity may be updated dynamically through a callback
     and depends mainly on the number of concurrent flows.
   - Examples (both cpp and python): io-degradation, network-nonlinear, exec-cpu-nonlinear

 - Dynamic factors: model variability in the speed of activities
    - Each action can now have a factor that affects its progression.
      This multiplicative factor is applied when updating the amount of work
      remaining, thereby an activity with factor=0.5 only uses half of the
      instantaneous power/bandwidth it is allocated and will appear twice
      slower than what it actually consumes.
    - This can be used to model a overhead (e.g., there is a 20 bytes
      header in a 480 bytes TCP packet so the factor 0.9583) but the novelty
      is this factor can now easily be adjusted depending on activity's and
      resources characteristics.
    - This existed for network (e.g., the effective bandwidth depends
      on the message in SMPI piecewise-linear network model) but it is now
      more general (the factor may depend on the source and destination and
      thus account to different behaviors for intra-node communications and
      extra-node communications) and is available for CPUs (e.g., if you
      want to model an affinity as in the "Unrelated Machines" problem in
      scheduling) and disks (e.g., if you want to model a stochastic
      capacity) too.